--- a/wews/Welcome/Welcome.css
+++ b/wews/Welcome/Welcome.css
@@ -48,3 +48,35 @@ footer {
     padding: 2rem 0;
     text-align: center;
 }
+
+.carousel-item{
+    height: 500px;
+    background: black;
+    color: white;
+    position: relative;
+    background-position: center;
+    background-size: cover;
+}
+.container-fluid{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-bottom: 50px;
+    height: 800px;
+}
+.overlay-image{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    background-position: center;
+    background-size: cover;
+    opacity: 0.7;
+}
+.facts{
+    background:  white;
+}
+
+
