--- a/wews/Welcome/Welcome.css
+++ b/wews/Welcome/Welcome.css
@@ -57,13 +57,12 @@ footer {
     background-position: center;
     background-size: cover;
 }
-.container-fluid{
+.container{
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    padding-bottom: 50px;
-    height: 800px;
+    padding-bottom: 50px
 }
 .overlay-image{
     position: absolute;
