--- a/wews/Seller/Seller.css
+++ b/wews/Seller/Seller.css
@@ -1,29 +1,24 @@
-/* Add your custom styles here */
-
+/* Body  */
 body {
-    padding-top: 56px; /* Adjusted for top navigation bar height */
+    font-family: 'Helvetica', sans-serif;
+    background-color: #f8f9fa;
+    padding-top: 56px; 
+}
+
+/* Navigation Bar  */
+.navbar {
+    background-color: #343a40;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-brand {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #ffffff;
 }
 
 .card-header h1 {
     font-size: 24px;
-}
-
-.btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
-}
-
-.btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
-}
-
-.dropdown-menu {
-    background-color: #007bff;
-}
-
-.dropdown-menu a {
-    color: #fff;
 }
 
 .modal-content {
@@ -55,4 +50,9 @@ body {
     max-width: 50px;
     max-height: 50px;
     margin-right: 10px;
+}
+
+img {
+    width: 10%;
+    height: 10%;
 }
