--- a/wews/Login/Login.css
+++ b/wews/Login/Login.css
@@ -1,6 +1,6 @@
 
 body {
-    background: url('assets/spave.jpg') no-repeat center center fixed;
+    background: url('../assets/photo2.png') no-repeat center center fixed;
     background-size: cover;
     font-family: 'Your Stylish Font', sans-serif;
     color: #fff;
